[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
config = "0.15.15"
reqwest = "0.12.23"
serde = "1.0.219"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies.sqlx]
version="0.8.6"
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"]
